添加代码:测试微任务和dom更新的顺序

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
     </div>
 </div>
 
+<div class="test" style="margin-bottom: 50px;padding-bottom: 20px;">
+    <button class="my-btn">按钮 测试微任务和dom渲染的先后</button>
+    <div class="test-text">111111</div>
+</div>
+
 <script src="index.js"></script>
 </body>
 </html>
